# psycopg

./: pyproject.toml
.github/workflows/: tests.yml
docs/advanced/: pipeline.rst
docs/api/: connections.rst  pq.rst
docs/basic/: install.rst
psycopg/: setup.cfg  setup.py  tox.ini
psycopg/psycopg/: __init__.py  _compat.py  _execute.py  _futures.py  _pipeline.py  _typeinfo.py  abc.py  client_cursor.py  connection.py  connection_async.py  conninfo.py  copy.py  cursor.py  cursor_async.py  generators.py  server_cursor.py  transaction.py  waiting.py
psycopg/psycopg/_anyio/: connection.py  copy.py
psycopg/psycopg/crdb/: __init__.py  connection.py
psycopg/psycopg/pq/: _enums.py  abc.py  (+3 more)
psycopg_c/psycopg_c/: _psycopg.pyi
psycopg_pool/psycopg_pool/: _compat.py  pool.py  pool_async.py
tests/: conftest.py  constraints.txt  fix_db.py  fix_mypy.py  fix_proxy.py  test_client_cursor_async.py  test_concurrency_async.py  test_connection.py  test_connection_async.py  test_conninfo.py  test_copy_async.py  test_cursor_async.py  test_dns.py  test_dns_srv.py  test_generators.py  test_module.py  test_pipeline.py  test_pipeline_async.py  test_server_cursor_async.py  test_tpc_async.py  test_transaction.py  test_transaction_async.py  test_typeinfo.py  test_typing.py  test_waiting.py  test_windows.py
tests/crdb/: test_connection_async.py  test_copy_async.py  test_cursor_async.py
tests/pool/: test_null_pool_async.py  test_pool.py  test_pool_async.py
tests/pq/: test_async.py  test_pgconn.py  test_pipeline.py
tests/scripts/: pipeline-demo.py
tests/types/: test_composite.py
(+4 files in other folders)
